--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^4.5.0"
+    "webpack": "^4.5.0",
+    "jquery": "^3.2.1"
   }
 }
